@@ -15,8 +15,11 @@ import org.litebridgedb.db.spi.expression.SelectExpression;
 import org.litebridgedb.db.spi.impl.ColumnIdentifierGenerator;
 import org.litebridgedb.db.spi.impl.function.SelectColumn;
 import org.litebridgedb.db.spi.query.Condition;
+import org.litebridgedb.db.spi.query.ConditionGroup;
 import org.litebridgedb.db.spi.query.Join;
 import org.litebridgedb.db.spi.query.Limit;
+import org.litebridgedb.db.spi.query.LogicCondition;
+import org.litebridgedb.db.spi.query.LogicOperator;
 import org.litebridgedb.db.spi.query.Operator;
 import org.litebridgedb.db.spi.query.OrderBy;
 import org.litebridgedb.db.spi.query.Select;
@@ -69,9 +72,10 @@ class SelectSqlGeneratorTest {
         when(typeConverter.convert("testValue", Types.VARCHAR)).thenReturn("testValue");
         final ColumnExpression columnExpression = new SelectColumn(column, selectSqlGenerator.columnIdentifierGenerator);
 
-        final Condition condition = new Condition(columnExpression, Operator.EQ, "testValue");
+        final LogicCondition condition = new LogicCondition(columnExpression, Operator.EQ, "testValue");
+        final ConditionGroup conditionGroup = new ConditionGroup(List.of(condition));
 
-        final Join join = new Join(table, List.of(condition));
+        final Join join = new Join(table, conditionGroup);
 
         // When
         final PreparedSql result = selectSqlGenerator.createJoin(join, mock(Select.class), mock(ConnectionProvider.class));
@@ -91,8 +95,9 @@ class SelectSqlGeneratorTest {
         final ColumnExpression columnExression1 = new SelectColumn(column1, selectSqlGenerator.columnIdentifierGenerator);
         final ColumnExpression columnExression2 = new SelectColumn(column2, selectSqlGenerator.columnIdentifierGenerator);
 
-        final Condition condition1 = new Condition(columnExression1, Operator.EQ, "value1");
-        final Condition condition2 = new Condition(columnExression2, Operator.NEQ, "value2");
+        final LogicCondition condition1 = new LogicCondition(columnExression1, Operator.EQ, "value1");
+        final LogicCondition condition2 = new LogicCondition(LogicOperator.AND, new Condition(columnExression2, Operator.NEQ, "value2"));
+        final ConditionGroup conditionGroup = new ConditionGroup(List.of(condition1, condition2));
 
         final TableMetaData tableMetaData = mock(TableMetaData.class);
         when(ensureTableMetaData.apply(eq(table), any(ConnectionProvider.class))).thenReturn(tableMetaData);
@@ -107,7 +112,7 @@ class SelectSqlGeneratorTest {
 
         when(typeConverter.convert(anyString(), eq(Types.VARCHAR))).then(i -> i.getArgument(0));
 
-        final Join join = new Join(table, List.of(condition1, condition2));
+        final Join join = new Join(table, conditionGroup);
 
         // When
         final PreparedSql result = selectSqlGenerator.createJoin(join, mock(Select.class), mock(ConnectionProvider.class));
@@ -169,23 +174,27 @@ class SelectSqlGeneratorTest {
 
         final Table joinTable = new Table("JOIN_TABLE", "j1");
         final Column joinCol = new Column(joinTable, "JCOL");
-        final Join join = new Join(joinTable, List.of(new Condition(new SelectColumn(joinCol, selectSqlGenerator.columnIdentifierGenerator), Operator.EQ, "val")));
+        final LogicCondition condition = new LogicCondition(new SelectColumn(joinCol, selectSqlGenerator.columnIdentifierGenerator), Operator.EQ, "val");
+        final ConditionGroup conditionGroup = new ConditionGroup(List.of(condition), Collections.emptyList());
+        final Join join = new Join(joinTable, conditionGroup);
 
-        final List<Condition> where = List.of(new Condition(new SelectColumn(col2, selectSqlGenerator.columnIdentifierGenerator), Operator.GT, 10));
+        final List<LogicCondition> whereConditions = List.of(new LogicCondition(new SelectColumn(col2, selectSqlGenerator.columnIdentifierGenerator), Operator.GT, 10));
+        final ConditionGroup where = new ConditionGroup(whereConditions);
 
         final List<OrderBy> orderBy = List.of(new OrderBy(selectCol1, false));
         final Limit limit = new Limit(Optional.of(10), Optional.of(5));
 
         final List<SelectExpression> groupBy = List.of(selectCol1);
-        final List<Condition> having = List.of(new Condition(new SelectColumn(col1, selectSqlGenerator.columnIdentifierGenerator), Operator.NEQ, "foo"));
+        final List<LogicCondition> havingConditions = List.of(new LogicCondition(new SelectColumn(col1, selectSqlGenerator.columnIdentifierGenerator), Operator.NEQ, "foo"));
+        final ConditionGroup having = new ConditionGroup(havingConditions);
 
         final Select select = new Select(
                 table,
                 new ArrayList<>(List.of(selectCol1, mock(SelectExpression.class))), // Test non-AliasedColumnExpression
                 new ArrayList<>(List.of(join)),
-                new ArrayList<>(where),
+                Optional.of(where),
                 groupBy,
-                new ArrayList<>(having),
+                Optional.of(having),
                 new ArrayList<>(orderBy),
                 Optional.of(limit)
         );
@@ -217,9 +226,9 @@ class SelectSqlGeneratorTest {
                 table,
                 Collections.emptyList(),
                 Collections.emptyList(),
+                Optional.empty(),
                 Collections.emptyList(),
-                Collections.emptyList(),
-                Collections.emptyList(),
+                Optional.empty(),
                 Collections.emptyList(),
                 Optional.empty()
         );
@@ -236,7 +245,8 @@ class SelectSqlGeneratorTest {
         // Given
         final Table table = new Table("JOIN_TABLE");
         final Column column = new Column(table, "COL1");
-        final Join join = new Join(table, List.of(new Condition(new SelectColumn(column, selectSqlGenerator.columnIdentifierGenerator), Operator.USING, null)));
+        final List<LogicCondition> conditions = List.of(new LogicCondition(new SelectColumn(column, selectSqlGenerator.columnIdentifierGenerator), Operator.USING, null));
+        final Join join = new Join(table, new ConditionGroup(conditions));
 
         // When
         final PreparedSql result = selectSqlGenerator.createJoin(join, mock(Select.class), mock(ConnectionProvider.class));
